--- a/analyze/analyze.ipynb
+++ b/analyze/analyze.ipynb
@@ -355,8 +355,13 @@
     "       'Date de mise à jour', 'Image de couverture', 'Programmes',\n",
     "       'En ligne - address_url', 'En ligne - address_url_text',\n",
     "       'En ligne - address_text', 'title_event', 'audience', 'childrens',\n",
-    "       'group']\n",
-    "\n",
+    "       'group']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Primary key : ID"
    ]
   },
@@ -364,14 +369,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Occurences : liste séparé par '_' (underscore)"
+    "Non atomic attributs :\n",
+    "- Occurences : List separated by '_' (underscore)\n",
+    "- Transport : List separated by '+'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Redudant attributs:\n",
+    "- Description de la date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functional dependencies :\n",
+    "- id -> url\n",
+    "- id -> titre\n",
+    "- id -> chapeau\n",
+    "- id -> description\n",
+    "- id -> date_de_debut\n",
+    "- id -> date_de_fin\n",
+    "- id -> occurences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
