--- a/analyze/analyze.ipynb
+++ b/analyze/analyze.ipynb
@@ -393,7 +393,38 @@
     "- id -> description\n",
     "- id -> date_de_debut\n",
     "- id -> date_de_fin\n",
-    "- id -> occurences"
+    "- id -> occurences\n",
+    "- date_de_debut, date_de_fin -> description_de_la_date\n",
+    "- id -> irl_de_l_image\n",
+    "- id -> credit_de_l_iage\n",
+    "- id -> nom_du_lieu\n",
+    "- id -> adresse_du_lieu\n",
+    "- id -> code_postale\n",
+    "- id -> ville\n",
+    "- adresse_du_lieu, ville, code_postale -> coordonnees_geographiques\n",
+    "- id -> acces_pmr\n",
+    "- id -> acces_mal_voyant\n",
+    "- id -> acces_mal_entendant\n",
+    "- adresse_du_lieu, ville, code_postale  -> transport\n",
+    "- id -> url_du_contact\n",
+    "- id -> telephone_de_contact\n",
+    "- id -> email_de_contact\n",
+    "- id -> url_facebook_associee\n",
+    "- id -> url_twitter_associe\n",
+    "- detail_du_prix -> type_de_prix\n",
+    "- id -> detail_du_prix\n",
+    "- id -> url_de_reservation\n",
+    "- id -> url_de_reservation_texte\n",
+    "- id -> date_de_mise_a_jour\n",
+    "- id -> image_de_couverture\n",
+    "- id -> programmes\n",
+    "- id -> en_ligne_address_url\n",
+    "- id -> en_ligne_address_url_text\n",
+    "- id -> en_ligne_address_text\n",
+    "- id -> title_event\n",
+    "- id -> audience\n",
+    "- id -> childrens\n",
+    "- id -> groupe"
    ]
   },
   {
