--- a/analyze/analyze.ipynb
+++ b/analyze/analyze.ipynb
@@ -371,7 +371,8 @@
    "source": [
     "Non atomic attributs :\n",
     "- Occurences : List separated by '_' (underscore)\n",
-    "- Transport : List separated by '+'"
+    "- Transport : List separated by '+'\n",
+    "- Geographic_Coordinates : longitude, latitude"
    ]
   },
   {
