--- a/analyze/analyze.ipynb
+++ b/analyze/analyze.ipynb
@@ -1022,31 +1022,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following decomposition, satisfy Boyce-codd and the third normal form at the same time."
+    "The following decomposition, satisfies Boyce-codd and the third normal form at the same time."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Relational schema"
+    "**event** (<ins>event_id</ins> | url, title, lead_text, description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)\n",
+    "\n",
+    "**occurence**(<ins>event_id, occurence</ins>)\n",
+    "\n",
+    "**tag**(<ins>event_id, keyword</ins>)\n",
+    "\n",
+    "**sub_event**(<ins>children_event_id</ins>, parent_event_id)\n",
+    "\n",
+    "**transport**(<ins>event_id, transport_type, line, station</ins> | distance)\n",
+    "\n",
+    "**address**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
+    "\n",
+    "**geographic_correspondance**(<ins>address_street, address_zipcode, address_city</ins> | lat, lon)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**event** (<ins>id</ins> | url, title, lead_text, description, date_start, date_end, occurrence, cover_url, cover_alt, cover_credit, tags, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, address_url, address_url_text, address_text, title_event, audience, contact_id)\n",
-    "\n",
-    "**contact**(<ins>contact_id</ins>|contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter)\n",
-    "\n",
-    "**geographic_correspondance**(<ins>address_street, address_zipcode, address_city </ins> | lat, lon)\n",
-    "\n",
-    "**transport**(<ins>lat, lon</ins>| type, line, station)\n",
-    "\n",
-    "**location_information**(<ins>address_name, address_street, address_zipcode, address_city</ins>| pmr, blind, deaf)\n",
-    "\n",
-    "**sub_events**(<ins>children_event_id</ins>, parent_event_id)"
+    "### Constraints"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Realistic implementation expectations\n",
+    "    - date_end > date_start\n",
+    "    - NOT NULL :\n",
+    "        - id, url\n",
+    "        - (date_start AND date_end) OR (ocurrences)\n",
+    "- Unrealistic implementation expections\n",
+    "    - url must finish with id\n",
+    "    - all urls must be valid\n",
+    "    - address must be valid\n",
+    "    - phone_number must be valid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Triggers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Index to add"
    ]
   },
   {
@@ -1054,104 +1086,6 @@
    "metadata": {},
    "source": [
     "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>URL</th>\n",
-       "      <th>Titre</th>\n",
-       "      <th>Chapeau</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.paris.fr/evenements/calculer-de-l-...</td>\n",
-       "      <td>Calculer, de l'abaque aux premières machines</td>\n",
-       "      <td>Viens découvrir avec l’association L’aventure ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.paris.fr/evenements/mission-archeo...</td>\n",
-       "      <td>Mission archéo à la Crypte de l'île de la Cité</td>\n",
-       "      <td>A l'aide d'un petit questionnaire, découvrez l...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.paris.fr/evenements/exposition-dan...</td>\n",
-       "      <td>Exposition « Dans la Seine. Objets trouvés de ...</td>\n",
-       "      <td>L’exposition présentée au cœur des vestiges de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.paris.fr/evenements/stage-graffiti...</td>\n",
-       "      <td>Stage Graffiti</td>\n",
-       "      <td>Stage graffiti au Centre Paris Anim' Clavel à ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.paris.fr/evenements/laissez-nous-d...</td>\n",
-       "      <td>Laissez nous danser !</td>\n",
-       "      <td>Dans le cadre de l'Olympiade culturelle, venez...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 URL  \\\n",
-       "0  https://www.paris.fr/evenements/calculer-de-l-...   \n",
-       "1  https://www.paris.fr/evenements/mission-archeo...   \n",
-       "2  https://www.paris.fr/evenements/exposition-dan...   \n",
-       "3  https://www.paris.fr/evenements/stage-graffiti...   \n",
-       "4  https://www.paris.fr/evenements/laissez-nous-d...   \n",
-       "\n",
-       "                                               Titre  \\\n",
-       "0       Calculer, de l'abaque aux premières machines   \n",
-       "1     Mission archéo à la Crypte de l'île de la Cité   \n",
-       "2  Exposition « Dans la Seine. Objets trouvés de ...   \n",
-       "3                                     Stage Graffiti   \n",
-       "4                              Laissez nous danser !   \n",
-       "\n",
-       "                                             Chapeau  \n",
-       "0  Viens découvrir avec l’association L’aventure ...  \n",
-       "1  A l'aide d'un petit questionnaire, découvrez l...  \n",
-       "2  L’exposition présentée au cœur des vestiges de...  \n",
-       "3  Stage graffiti au Centre Paris Anim' Clavel à ...  \n",
-       "4  Dans le cadre de l'Olympiade culturelle, venez...  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[['URL', 'Titre', 'Chapeau']].head()"
    ]
   },
   {
