wip tables implementation

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1029,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**event_table** (<ins>event_id</ins> | url, title, lead_text, description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)\n",
+    "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)\n",
     "\n",
     "**occurence**(<ins>event_id, occurence</ins>)\n",
     "\n",
@@ -1037,7 +1037,7 @@
     "\n",
     "**sub_event**(<ins>children_event_id</ins>, parent_event_id)\n",
     "\n",
-    "**transport**(<ins>event_id, transport_type, line, station</ins> | distance)\n",
+    "**transport**(<ins>event_id, transport_type, transport_line, station</ins> | distance)\n",
     "\n",
     "**address**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
     "\n",
