wip table implementation, issue: foreign key reference address

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1039,7 +1039,7 @@
     "\n",
     "**transport**(<ins>event_id, transport_type, transport_line, station</ins> | distance)\n",
     "\n",
-    "**address**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
+    "**address_table**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
     "\n",
     "**geographic_correspondance**(<ins>address_street, address_zipcode, address_city</ins> | lat, lon)"
    ]
