--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1029,6 +1029,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**geographic_correspondance**(<ins>address_street, address_zipcode, address_city</ins> | lat, lon)\n",
+    "\n",
+    "**address_table**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
+    "\n",
+    "\n",
     "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)\n",
     "\n",
     "**occurence**(<ins>event_id, occurence</ins>)\n",
@@ -1037,11 +1042,7 @@
     "\n",
     "**sub_event**(<ins>children_event_id</ins>, parent_event_id)\n",
     "\n",
-    "**transport**(<ins>event_id, transport_type, transport_line, station</ins> | distance)\n",
-    "\n",
-    "**address_table**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
-    "\n",
-    "**geographic_correspondance**(<ins>address_street, address_zipcode, address_city</ins> | lat, lon)"
+    "**transport**(<ins>event_id, transport_type, transport_line, station</ins> | distance)\n"
    ]
   },
   {
