REPORT almost done

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1036,7 +1036,7 @@
     "\n",
     "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)\n",
     "\n",
-    "**occurence**(<ins>event_id, occurence</ins>)\n",
+    "**occurence**(<ins>event_id, occurence_date</ins>)\n",
     "\n",
     "**tag**(<ins>event_id, keyword</ins>)\n",
     "\n",
@@ -1044,6 +1044,11 @@
     "\n",
     "**transport**(<ins>event_id, transport_type, transport_line, station</ins> | distance)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
