--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -893,13 +893,44 @@
        "9                                    Public adultes.       NaN          Aucun  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     Bibliothèques\n",
+       "1             Aucun\n",
+       "2             Aucun\n",
+       "3             Aucun\n",
+       "4            Agenda\n",
+       "          ...      \n",
+       "95     Nuit Blanche\n",
+       "96           Musées\n",
+       "97    Bibliothèques\n",
+       "98    Bibliothèques\n",
+       "99     Nuit Blanche\n",
+       "Name: group, Length: 100, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['group'].head(100)"
    ]
   },
   {
@@ -1008,7 +1039,7 @@
     "- id -> title_event\n",
     "- id -> audience\n",
     "- id -> childrens\n",
-    "- id -> groupe"
+    "- id -> group"
    ]
   },
   {
@@ -1034,11 +1065,11 @@
     "**address_table**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
     "\n",
     "\n",
-    "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)\n",
+    "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text, keyword, group_name)\n",
     "\n",
     "**occurence**(<ins>event_id, occurence_date</ins>)\n",
     "\n",
-    "**tag**(<ins>event_id, keyword</ins>)\n",
+    "**group**(<ins>event_id, group</ins>)\n",
     "\n",
     "**sub_event**(<ins>children_event_id</ins>, parent_event_id)\n",
     "\n",
