--- a/report/modelization.qmd
+++ b/report/modelization.qmd
@@ -10,12 +10,9 @@ The following decomposition, satisfies Boyce-codd normal form at the same time :
 
 **address_table**([address_name, address_street, address_zipcode, address_city]{.underline} | pmr, blind, deaf)
 
-
-**event_table** ([event_id]{.underline} | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text)
+**event_table** ([event_id]{.underline} | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text, keyword, group_name)
 
 **occurence**([event_id, occurence_date]{.underline})
-
-**tag**([event_id, keyword]{.underline})
 
 **sub_event**([children_event_id]{.underline}, parent_event_id)
 
