--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1065,9 +1065,11 @@
     "**address_table**(<ins>address_name, address_street, address_zipcode, address_city</ins> | pmr, blind, deaf)\n",
     "\n",
     "\n",
-    "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text, keyword, group_name)\n",
+    "**event_table** (<ins>event_id</ins> | event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text, group_name)\n",
     "\n",
     "**occurence**(<ins>event_id, occurence_date</ins>)\n",
+    "\n",
+    "**tag**(<ins>event_id</ins>, keyword)\n",
     "\n",
     "**group**(<ins>event_id, group</ins>)\n",
     "\n",
