--- a/report/analysis.qmd
+++ b/report/analysis.qmd
@@ -58,6 +58,8 @@ Non atomic attributs :
     - It's true, but for simplicity sake, we'll ignore it.
 - ville $\to$ cp
     - It's neither true in France and ``Ile de France``
+- (titre, date_de_debut, date_de_fin, nom_du_lieu, adresse_du_lieu, code_postale, ville) $\to$ id
+    - We cannot use those attributes as a primary key, because they are often `NULL`, thus we'll ignore this functionnal dependency. 
 
 ## Constraints
 - Realistic implementation expectations
