--- a/report/analysis.qmd
+++ b/report/analysis.qmd
@@ -60,6 +60,9 @@ Non atomic attributs :
     - It's neither true in France and ``Ile de France``
 - (titre, date_de_debut, date_de_fin, nom_du_lieu, adresse_du_lieu, code_postale, ville) $\to$ id
     - We cannot use those attributes as a primary key, because they are often `NULL`, thus we'll ignore this functionnal dependency. 
+## Misc
+
+We decide to translate everything to english.
 
 ## Constraints
 - Realistic implementation expectations
@@ -73,6 +76,30 @@ Non atomic attributs :
     - address must be valid
     - phone_number must be valid
 
-## Misc
+## Functional dependencies after decomposition
 
-We decide to translate everything to english.
+- Relation : **geographic_correspondance**
+    - [address_street, address_zipcode, address_city]{.underline} $\to$ lat, lon
+- Relation : **address_table**
+    - [address_name, address_street, address_zipcode, address_city]{.underline} $\to$ pmr, blind, deaf
+
+- Relation : **event_table** 
+    - [event_id]{.underline} $\to$ event_url, title, lead_text, event_description, date_start, date_end, cover_url, cover_alt, cover_credit, address_name, address_street, address_zipcode, address_city, price_type, price_detail, access_type, access_link, access_link_text, updated_at, image_couverture, programs, title_event, audience, contact_url, contact_phone, contact_mail, contact_facebook, contact_twitter, address_url, address_url_text, address_text, keyword, group_name, parent_event_id
+
+- Relation : **occurence**
+    - [event_id, occurence_date]{.underline} (no functional dependancy)
+- Relation : **tag**
+    - [event_id, keyword]{.underline} (no functional dependancy)
+
+- Relation : **transport**
+    - [event_id, transport_type, transport_line, station]{.underline} $\to$ distance
+
+### Boyce-Codd verification
+- 1NF : Atomicity and no list attributs 
+    - Checked
+- 2NF : Attributes cannot depend only on a subpart of the primary key
+    - Checked
+- 3NF : No transitive dependances
+    - Checked
+- Boyce-Codd : $X \to Y$ $\implies$ $X$ is a superkey keyword
+    - Checked
